Implemented Ascending and Descending sorting based on updated date and also implemneted FCM messaging and provided support to handle data payload

--- a/MoEngage/app/src/main/res/values/strings.xml
+++ b/MoEngage/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MoEngageTest</string>
+    <string name="new_to_old">New to Old</string>
+    <string name="old_to_new">Old to New</string>
 </resources>
