--- a/MoEngage/app/src/main/res/values/strings.xml
+++ b/MoEngage/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
     <string name="app_name">MoEngageTest</string>
-    <string name="new_to_old">New to Old</string>
-    <string name="old_to_new">Old to New</string>
+    <string name="new_to_old">Sort by New to Old</string>
+    <string name="old_to_new">Sort by Old to New</string>
     <string name="no_aticles_found_text">No articles found</string>
     <string name="something_went_wrong_text">Something went wrong, Please restart your App</string>
+    <string name="Author_text">Author</string>
+    <string name="title_text">Title</string>
+    <string name="description_text">Description :</string>
+    <string name="content_text">Content :</string>
+    <string name="published_at_text">Published at</string>
 </resources>
